--- a/src/app/components/Public/Header/header.module.scss
+++ b/src/app/components/Public/Header/header.module.scss
@@ -30,7 +30,7 @@
 }
 
 .nav.navActive {
-	z-index: 1000;
+	z-index: 10;
 }
 
 .navList {
@@ -78,6 +78,7 @@
 
 	.nav {
 		position: absolute;
+		z-index: 1000;
 		top: 100%;
 		left: 0;
 		right: 0;
@@ -91,6 +92,7 @@
 
 	.nav.navActive {
 		max-height: 500px;
+
 		pointer-events: auto;
 	}
 
